# c

./:   file_eof  CMakeLists.txt  README.md  a.out  alignas  alipay.c  binbit  char_array.c  echo  echo_eof  exit.c  fathm_ft.c  fields  g.c  guess  hello.c  main  major.cpp  newords  pizza.c  printf1.c  project.cpp  radix_turn.c  salary_turn.c  shoes1  shoes1.c  showchar  status.c  test  test.c  test1  test1.c  test3  test3.c  test4  test4-1.c  test4-2.c  test4.c  test5  test5.c  (+14 more)
51/bee/: bee.c
51/led/: led.asm  led.c  led.ihx  led.lk  led.lst  led.map  led.rel  led.rst  led.sym
51/moto/: delay.c  delay.h  main.asm  main.c  main.ihx  main.lk  main.lst  main.map  main.rel  main.rst  main.sym  moto.c  moto.h
DataStrture/: come.c
binary/: alignas.c  binbit.c  fields.c
come.dSYM/Contents/: Info.plist
come.dSYM/Contents/Resources/DWARF/: come
c终端编译.rtfd/: TXT.rtf
echo_eof.dSYM/Contents/: Info.plist
echo_eof.dSYM/Contents/Resources/DWARF/: echo_eof
handleput/:   file_eof.c  echo.c  echo_eof.c  guess.c  showchar.c
showchar.dSYM/Contents/: Info.plist
showchar.dSYM/Contents/Resources/DWARF/: showchar
